--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^6.1.17",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.1.3",
     "embla-carousel-react": "^8.1.3",
     "lucide-react": "^0.379.0",
     "next": "14.2.3",
