--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18",
     "react-navigation": "^5.0.0",
     "react-navigation-header-buttons": "^12.0.0",
+    "sonner": "^1.4.41",
     "tailwind-gradient-mask-image": "^1.2.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
