--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "generate:types": "PAYLOAD_CONFIG_PATH=./payload.config.ts payload generate:types"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.590.0",
     "@payloadcms/db-mongodb": "3.0.0-beta.40",
     "@payloadcms/next": "3.0.0-beta.40",
     "@payloadcms/plugin-cloud": "3.0.0-beta.40",
@@ -28,6 +29,7 @@
     "next": "14.2.3",
     "next-themes": "^0.3.0",
     "payload": "3.0.0-beta.40",
+    "payload-s3-upload": "^2.1.1",
     "react": "^18",
     "react-dom": "^18",
     "react-navigation": "^5.0.0",
