--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.590.0",
-    "@payloadcms/db-mongodb": "3.0.0-beta.40",
-    "@payloadcms/next": "3.0.0-beta.40",
-    "@payloadcms/plugin-cloud": "3.0.0-beta.40",
-    "@payloadcms/richtext-lexical": "3.0.0-beta.40",
+    "@payloadcms/db-mongodb": "3.0.0-beta.59",
+    "@payloadcms/next": "3.0.0-beta.59",
+    "@payloadcms/plugin-cloud": "3.0.0-beta.59",
+    "@payloadcms/richtext-lexical": "3.0.0-beta.59",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-slot": "^1.0.2",
@@ -29,7 +29,7 @@
     "lucide-react": "^0.379.0",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
-    "payload": "3.0.0-beta.40",
+    "payload": "3.0.0-beta.59",
     "payload-s3-upload": "^2.1.1",
     "react": "^18",
     "react-dom": "^18",
@@ -51,6 +51,6 @@
     "install": "^0.13.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "5.4"
   }
 }
